tests/parse_error_node/parse_error_node.exp
Error ----------------------------------------------------------------------------------------------- ParseError.js:3:18

Unexpected token #

   3| function foo() { ### // invalid token
                       ^



Found 1 error
